deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"tasks:latest","namespace":"agroom-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"tasks\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: tasks
      app.kubernetes.io/component: tasks
      app.kubernetes.io/instance: tasks
      app.kubernetes.io/name: tasks
    name: tasks
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: tasks
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: tasks
      spec:
        containers:
        - image: ' '
          name: tasks
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: tasks
      app.kubernetes.io/component: tasks
      app.kubernetes.io/instance: tasks
      app.kubernetes.io/name: tasks
    name: tasks
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      deployment: tasks
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: tasks
      app.kubernetes.io/component: tasks
      app.kubernetes.io/instance: tasks
      app.kubernetes.io/name: tasks
    name: tasks
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: ""
      name: tasks
      weight: null
  status: {}
kind: List
metadata: {}
